# Lab_RAG

./: .gitignore  activity_1_RAG.ipynb  activity_1_RAG_solution.ipynb  activity_2.1_Agent_HomeIO.ipynb  activity_2.1_Agent_solution_HomeIO.ipynb  activity_2.2_LangGraph.ipynb  activity_2.a_Simple_Agent_solution_HomeIO.ipynb  activity_2.b_LangGraph_solution.ipynb  activity_2_Agent.ipynb  activity_2_Agent_solution.ipynb  activity_2a_Agent.ipynb  activity_2a_Simple_Agent_solution.ipynb  activity_2a_Simple_Agent_solution_HomeIO.ipynb  activity_2b_LangGraph.ipynb  activity_2b_LangGraph_solution.ipynb  activity_2b_LangGraph_with_API.ipynb  config.py  pyproject.toml  readme.md  testRequest.ipynb
audio/: recording.webm
data/vectorstores_pdf/: index.faiss  index.pkl
homeIO/: .gitignore
homeIO/IIoT/: .gitignore  README.md  rest-get.json  rest-post.json
