[project]
name = "lab-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.8",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "pypdf>=6.6.2",
    "rich>=14.3.2",
    "sentence-transformers>=5.2.2",
    "wget>=3.2",
]
